[package]
name = "example-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
kube-dra = { git = "https://github.com/nubicle/kube-dra.git", branch = "plugin_registration" }
tokio = { version = "1.50.0", features = ["macros", "signal", "rt", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

